--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curelink</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="shortcut icon" href="/Assets/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
 </head>
 <body>
     <div class="banner">
         <div class="logon">
-            <img class="profile" src="/Assets/profile.png" alt="">
+            <img class="profile" src="/profile.png" alt="">
             <hr width="60%" color="#d49290">
             <h2>Aman Singla & Divyansh Jain</h2>
             <p>Founder and Co-Founder<br>At</p>
-            <img class="curelink-logo" src="/Assets/Logo.png" alt="">
+            <img class="curelink-logo" src="/Logo.png" alt="">
         </div>
     </div>
 </body>
